# Voice_detection_wasm

./: README.md
audio-vad-wasm/: CMakeLists.txt  build.sh  index.html
audio-vad-wasm/public/: index.html
audio-vad-wasm/src/: audio_processor.js  vad_wrapper.c
